Update 2.Q.1 Easy Questions.md

--- a/DOMAIN2: Asset Security/2.Q.1 Easy Questions.md
+++ b/DOMAIN2: Asset Security/2.Q.1 Easy Questions.md
@@ -785,3 +785,157 @@ Overall Explanation:
 Certain sectors and overprovisioned areas of storage devices may remain inaccessible to conventional erasure methods, making specialized data-clearing procedures necessary. On SSDs, wear leveling and overprovisioned space can hide residual data even after standard wipes, highlighting the need for secure sanitization techniques tailored to the storage medium.
 
 </details>
+
+---
+
+26. In the context of establishing robust cybersecurity protocols within a corporate environment, especially for firms handling sensitive data or operating in regulated industries, which of the following terms serves as a foundational concept representing the initial threshold for implementing a minimum security standard?
+
+(A) Policy
+(B) Configuration Item
+(C) Benchmark
+(D) Baseline
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (D) Baseline
+
+Explanation:
+A baseline defines the minimum security standard or starting point for an organization’s cybersecurity measures. It serves as a reference for implementing security controls, monitoring compliance, and assessing deviations or improvements in security posture.
+
+Incorrect Answers:
+
+(A) Policy: Policies outline rules and guidelines for security but do not define the minimum threshold or starting point for implementation.
+
+(B) Configuration Item: This refers to individual system components that can be managed or tracked; it is not about establishing a minimum security standard.
+
+(C) Benchmark: Benchmarks compare current practices against standards or best practices but do not represent the initial baseline for security.
+
+Overall Explanation:
+Establishing a baseline provides a clear reference point for consistent application of security controls. It ensures that all systems meet the minimum security requirements before additional controls or enhancements are implemented.
+
+</details>
+
+---
+
+27. You have been asked to help in finding two classification criteria for your company's data, in order to apply the best protection countermeasures. What is going to be your proposal?
+
+(A) Criticality and Sensitivity
+(B) Date of Creation, (Expected) Date of Erasure
+(C) Format and available metadata
+(D) Durability and Usability
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (A) Criticality and Sensitivity
+
+Explanation:
+
+Criticality refers to the importance of the data for the business and how essential it is for operations.
+
+Sensitivity relates to the confidentiality or privacy level of the data.
+Using these criteria helps determine appropriate protection measures based on the business impact and sensitivity of the data.
+
+Incorrect Answers:
+
+(B) Date of Creation, (Expected) Date of Erasure: Temporal data attributes related to lifecycle management, not classification criteria.
+
+(C) Format and available metadata: Technical characteristics of data; not directly used for security classification.
+
+(D) Durability and Usability: Attributes about storage and accessibility, not about protection requirements.
+
+Overall Explanation:
+Classification criteria must help determine what data needs protection and how critical or sensitive it is, which guides the choice of security controls. Criticality and sensitivity are the most direct and practical criteria for this purpose.
+
+</details>
+
+---
+
+28. Why would it be beneficial to conduct a quantitative analysis of your company's assets?
+
+(A) To benchmark our company's values with other companies
+(B) Because it is faster than performing a qualitative analysis
+(C) To evaluate the insurance costs
+(D) To determine the cost effectiveness of countermeasures
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (D) To determine the cost effectiveness of countermeasures
+
+Explanation:
+Quantitative analysis assigns monetary values to assets and potential risks, allowing organizations to evaluate the cost-effectiveness of different security controls. This provides a solid basis for decision-making regarding resource allocation to mitigate risks.
+
+Incorrect Answers:
+
+(A) To benchmark our company's values with other companies: Quantitative analysis focuses on internal asset valuation, not comparing with other organizations.
+
+(B) Because it is faster than performing a qualitative analysis: Speed is not the main advantage; precision and numerical insight are.
+
+(C) To evaluate the insurance costs: While it can support insurance assessments, this is not the primary purpose.
+
+Overall Explanation:
+The main benefit of quantitative analysis lies in numerically evaluating risk and protection measures, which is essential for cost-effective cybersecurity decision-making.
+
+</details>
+
+---
+
+29. You are assigned the responsibility of guaranteeing the secure transportation of hard drives containing highly sensitive information to one of the company's branch offices situated across the country. What special handling requirement should be enforced to prevent any unauthorized access to the data stored on the media?
+
+(A) Administrative measures enforcement
+(B) Transport Media Encryption
+(C) Storage Media Encryption
+(D) Data at Rest protection
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (C) Storage Media Encryption
+
+Explanation:
+Applying encryption directly on the storage media ensures that even if the physical hard drives are accessed without authorization, the data remains secure. This is a critical measure when transporting sensitive information across locations.
+
+Incorrect Answers:
+
+(A) Administrative measures enforcement: Administrative controls alone are insufficient; encryption is required to technically protect the data during transport.
+
+(B) Transport Media Encryption: This generally secures data in transit over networks or communication channels, not the storage media itself.
+
+(D) Data at Rest protection: While this includes storage encryption, the focus here is on the transport phase, making storage media encryption the specific requirement.
+
+Overall Explanation:
+Securing sensitive storage media in transit requires technical measures (encryption) in addition to administrative controls, ensuring data remains inaccessible if the media is lost, stolen, or intercepted.
+
+</details>
+
+---
+
+30. What steps should you take when the information within your company has reached its archival expiration date, meaning it is no longer required for legal purposes?
+
+(A) You backup the archive
+(B) You should destroy the information
+(C) You should have a 2nd level Archive
+(D) You better keep the information
+
+<details> <summary>Show answer</summary>
+
+Correct Answer: (B) You should destroy the information
+
+Explanation:
+Once information has reached its archival expiration date and is no longer legally required, secure destruction is the best practice. This minimizes the risk of unauthorized access and ensures compliance with data protection and privacy regulations.
+
+Incorrect Answers:
+
+(A) You backup the archive: Backing up expired information is unnecessary and may lead to excessive data retention.
+
+(C) You should have a 2nd level Archive: Maintaining a second archive is redundant and increases security and compliance risks.
+
+(D) You better keep the information: Keeping expired information can create legal, security, and storage issues.
+
+Overall Explanation:
+Secure disposal of information that is no longer needed is a key part of data lifecycle management and ensures compliance with regulatory requirements while reducing risk.
+
+</details>
+
+---
+
+
+
