Update 2.01 Identify and classify information and assets.md

--- a/DOMAIN2: Asset Security/2.01 Identify and classify information and assets.md
+++ b/DOMAIN2: Asset Security/2.01 Identify and classify information and assets.md
@@ -1,12 +1,10 @@
 ## 2.1.1 Data Classification ##
 
-Data is the lifeblood of any organization. From financial records to customer information, strategic plans, and trade secrets, the variety and volume of data are immense, even for small manufacturing companies. Protecting this data from unauthorized access, use, disclosure, modification, or destruction is not just good practice, it's crucial for survival. Data security strictly requires a proper data classification.
+Data is the lifeblood of any organization. From financial records to customer information, strategic plans, and trade secrets, the variety and volume of data are immense, even for small manufacturing companies. Protecting this data from unauthorized access, use, disclosure, modification, or destruction is not just good practice, it's crucial for survival. 
 
 :link: Keep in mind what you learned in [1.2 Understand and apply security concepts](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
 
-To understand the concept behind data classification you can think of it like sorting your clothes: you wouldn't throw your delicates in with your work boots, right? Similarly, data classification is the process of organizing data into categories that reflect its sensitivity and value. This careful categorization allows organizations to apply the appropriate level of security controls, ensuring that the "crown jewels" are kept under lock and key while less critical information can be accessed more easily.
-
-:link: I do not want you to be scared, but to be aware of what may happen to your data. Giva a look at [The 18 biggest data breaches of the 21st century](https://www.csoonline.com/article/534628/the-biggest-data-breaches-of-the-21st-century.html).
+Data security strictly requires a proper **data classification**. To understand the concept behind data classification you can think of it like sorting your clothes: you wouldn't throw your delicates in with your work boots, right? Similarly, data classification is the process of organizing data into categories that reflect its sensitivity and value. This careful categorization allows organizations to apply the appropriate level of security controls, ensuring that the "crown jewels" are kept under lock and key while less critical information can be accessed more easily.
 
 By classifying data, organizations can:
 
@@ -34,9 +32,9 @@ Organizations use various criteria to determine the appropriate classification l
 
 :link: Protected Health Information (PHI) is defined by [HIPAA (Health Insurance Portability and Accountability Act)](https://www.hhs.gov/hipaa/for-professionals/privacy/laws-regulations/index.html) as "individually identifiable health information" that is transmitted or maintained in any form or medium (electronic, paper, or oral). This includes information related to an individual's past, present, or future physical or mental health, healthcare services, or payment for healthcare, which can be linked to a specific person. 
 
-The following Infographic tries to recap all the sensitive data you may encounter in organizations:
+The following Infographic tries to recap the different types of sensitive data you may encounter in organizations:
 
-<img width="512" height="503" alt="PI" src="https://github.com/user-attachments/assets/fe0e7985-8333-4dab-923f-3f966c5d04b8" />
+<img width="1091" height="1071" alt="SensitiveDataEquation drawio" src="https://github.com/user-attachments/assets/c97d2025-7271-4f97-91bd-b8854c998eef" />
 
 Some common data classification levels for commercial businesses include:
 
