Update 2.01 Identify and classify information and assets.md

--- a/DOMAIN2: Asset Security/2.01 Identify and classify information and assets.md
+++ b/DOMAIN2: Asset Security/2.01 Identify and classify information and assets.md
@@ -39,18 +39,18 @@ The following Infographic tries to recap the different types of sensitive data y
 
 Some common data classification levels for commercial businesses include:
 
-- Confidential: The most sensitive data, unauthorized disclosure of which could severely impact the company. Think trade secrets, financial algorithms, or strategic plans. 
-- Private: Data that requires more than normal protection to ensure its confidentiality. Examples include employee records, medical information, or legal documents. 
-- Sensitive: Data that requires special precautions but is not as critical as confidential or private data. Financial reports, marketing strategies, or upcoming projects fall under this category. 
-- Public: Information that is generally available and poses no risk if disclosed. This might include company addresses, press releases, or product brochures
+- **Confidential:** The most sensitive data, unauthorized disclosure of which could severely impact the company. Think trade secrets, financial algorithms, or strategic plans. 
+- **Private:** Data that requires more than normal protection to ensure its confidentiality. Examples include employee records, medical information, or legal documents. 
+- **Sensitive:** Data that requires special precautions but is not as critical as confidential or private data. Financial reports, marketing strategies, or upcoming projects fall under this category. 
+- **Public:** Information that is generally available and poses no risk if disclosed. This might include company addresses, press releases, or product brochures
 
 Military and government organizations employ a different classification scheme, reflecting the potential impact on national security. These are common military classification levels:
 
-- Top Secret: Unauthorized disclosure could cause exceptionally grave damage to national security, such as jeopardizing military operations or revealing sensitive intelligence sources.
-- Secret: Data that, if disclosed, could cause serious damage to national security. 
-- Confidential: Information that could cause damage to national security if compromised. 
-- Unclassified: Data that doesn't meet the criteria for classified information but may still require some level of protection. 
-- Controlled Unclassified Information (CUI): Sensitive information that is not classified but requires safeguarding. 
+- **Top Secret:** Unauthorized disclosure could cause exceptionally grave damage to national security, such as jeopardizing military operations or revealing sensitive intelligence sources.
+- **Secret:** Data that, if disclosed, could cause serious damage to national security. 
+- **Confidential:** Information that could cause damage to national security if compromised. 
+- **Unclassified:** Data that doesn't meet the criteria for classified information but may still require some level of protection. 
+- **Controlled Unclassified Information (CUI):** Sensitive information that is not classified but requires safeguarding. 
 
 | Environment               | Classification Level         | Description & Examples                                                                 |
 |---------------------------|------------------------------|----------------------------------------------------------------------------------------|
