Update 2.03 Provision information and assets securely.md

--- a/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
+++ b/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
@@ -118,7 +118,7 @@ Ensuring that systems are free from unauthorized software is equally important. 
 Intangible assets, such as intellectual property, patents, trademarks, and a company's reputation, as we already said, also require careful management. Although these assets lack a physical form, they hold significant value for an organization and need protection. Assigning a monetary value to intangible assets can be challenging, often involving estimations of their potential benefits to the organization.
 For instance, the value of a patent can be estimated based on the revenue generated from products based on that patent. In the United States, patents have a validity period of 20 years, which can also factor into the valuation process.
 
-:link: See also [1.4.2](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#142-licensing-and-intellectual-property-requirements)
+:link: See also [1.4.2 Licensing and Intellectual Property requirements](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.04%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#142-licensing-and-intellectual-property-requirements)
 
 Maintaining patents requires periodic fee payments, emphasizing the importance of diligent tracking to avoid potential loss. Large organizations typically report intangible asset values on their balance sheets in accordance with **Generally Accepted Accounting Principles (GAAP)**. This practice ensures regular review and highlights the significance of intangible assets in an organization's overall financial health.
 
