Update 2.D.1 Mastering Configuration Management: The Hidden Shield of Your IT Security.md

--- a/DOMAIN2: Asset Security/2.D.1 Mastering Configuration Management: The Hidden Shield of Your IT Security.md
+++ b/DOMAIN2: Asset Security/2.D.1 Mastering Configuration Management: The Hidden Shield of Your IT Security.md
@@ -39,8 +39,8 @@ flowchart TD
 
     A --> F[🔐 Access Control]
     F --> F1[Limit admin accounts]
-    F --> F2[Disable insecure accounts (e.g. guest)]
-    F --> F3[Use Just-In-Time (JIT) privileges]
+    F --> F2[Disable insecure accounts - e.g. guest]
+    F --> F3[Use Just-In-Time -JIT- privileges]
     F --> F4[Log privileged activity for audits]
 
     A --> G[🧱 System Hardening]
