Update 2.D.1 Mastering Configuration Management: The Hidden Shield of Your IT Security.md

--- a/DOMAIN2: Asset Security/2.D.1 Mastering Configuration Management: The Hidden Shield of Your IT Security.md
+++ b/DOMAIN2: Asset Security/2.D.1 Mastering Configuration Management: The Hidden Shield of Your IT Security.md
@@ -16,7 +16,7 @@ Finally, managing change is not just about process — it’s about **protection
 
 ```mermaid
 
-flowchart TD
+flowchart LR
     A[🛠️ Configuration Management] --> B[🎯 Purpose]
     B --> B1[Maintain security & operational integrity]
     B --> B2[Ensure compliance with standards]
