Update 6.5 Conduct or facilitate security audits.md

--- a/DOMAIN6: Security Assessment and Testing/6.5 Conduct or facilitate security audits.md
+++ b/DOMAIN6: Security Assessment and Testing/6.5 Conduct or facilitate security audits.md
@@ -1,6 +1,8 @@
 ## 6.5.0 Preface ##
 
-Auditing is one of the key ways organizations check whether their security policies, controls, and processes are actually working as intended. Think of auditing as a formal, structured way to validate that systems are both compliant with standards and protected against threats.
+Auditing is one of the key ways organizations check whether their security policies, controls, and processes are actually working as intended. 
+
+:necktie: Auditing as a formal, structured way to validate that systems are both compliant with standards and protected against threats.
 
 Audits help uncover weak points in an organization’s defenses, gaps in compliance, or evidence that processes aren’t being followed. They’re not limited to technical systems — they can also apply to management, training, documentation, and even vendor security.
 
