Update 6.5 Conduct or facilitate security audits.md

--- a/DOMAIN6: Security Assessment and Testing/6.5 Conduct or facilitate security audits.md
+++ b/DOMAIN6: Security Assessment and Testing/6.5 Conduct or facilitate security audits.md
@@ -15,7 +15,7 @@ Sampling saves time and money but still gives organizations reasonable confidenc
 - Stratified sampling (divide into groups and sample from each group)
 - Judgmental sampling (based on the auditor’s experience, picking “high risk” areas to check)
 
-:bulb: Sampling is especially useful when dealing with large and complex systems, like cloud environments, distributed networks, or organizations with multiple offices
+:bulb: Sampling is especially useful when dealing with large and complex systems, like cloud environments, distributed networks, or organizations with multiple offices.
 
 Several well-known frameworks guide auditors on what to check, how to check it, and what to document. These frameworks help create consistency, so audits are reliable and comparable:
 
@@ -40,10 +40,10 @@ An internal audit typically follows a clear cycle:
 
 ```mermaid
 flowchart LR
-    A[Planning] --> B[Fieldwork]
-    B --> C[Analysis]
-    C --> D[Reporting]
-    D --> E[Remediation & Follow-Up]
+    A[1. Planning] --> B[2. Fieldwork]
+    B --> C[3. Analysis]
+    C --> D[4. Reporting]
+    D --> E[5. Remediation & Follow-Up]
 
     A --> A1[Define scope: systems, processes, departments, policies]
     A --> A2[Set goals: compliance, risk exposure, operational performance]
