Update 6.5 Conduct or facilitate security audits.md

--- a/DOMAIN6: Security Assessment and Testing/6.5 Conduct or facilitate security audits.md
+++ b/DOMAIN6: Security Assessment and Testing/6.5 Conduct or facilitate security audits.md
@@ -114,9 +114,9 @@ An external audit usually follows a structured process:
 
 ```mermaid
 flowchart LR
-   A[Planning] --> B[Documentation Review]
-    B --> C[Interviews and Testing]
-    C --> D[Report Generation]
+   A[1. Planning] --> B[2. Documentation Review]
+    B --> C[3. Interviews and Testing]
+    C --> D[4. Report Generation]
 
     A:::step
     B:::step
