Update 6.5 Conduct or facilitate security audits.md

--- a/DOMAIN6: Security Assessment and Testing/6.5 Conduct or facilitate security audits.md
+++ b/DOMAIN6: Security Assessment and Testing/6.5 Conduct or facilitate security audits.md
@@ -209,11 +209,11 @@ Sometimes the audit is part of a contractual agreement; other times it’s done 
 
 When planning or performing a security audit, it’s important to understand where the systems, data, and controls are located — this directly affects how the audit is done. In modern environments, organizations often use a mix of different setups: on-premises, cloud, or hybrid. Each location type brings different risks, tools, and audit considerations.
 
-**On-Premises Audits.** On-premises means the systems, servers, and data storage are physically located inside the organization’s buildings, usually in company-owned data centers. Auditors can directly inspect physical security (locks, badges, CCTV), network devices, and server configurations. On-premises audits give clear visibility and control but require access to the physical location and staff.
+- **On-Premises Audits.** On-premises means the systems, servers, and data storage are physically located inside the organization’s buildings, usually in company-owned data centers. Auditors can directly inspect physical security (locks, badges, CCTV), network devices, and server configurations. On-premises audits give clear visibility and control but require access to the physical location and staff.
 
-**Cloud Audits.** In cloud environments, data and systems live on servers owned by cloud providers like AWS, Microsoft Azure, or Google Cloud. Auditors focus less on physical security and more on the shared responsibility model, where the cloud provider secures the infrastructure, but the customer is responsible for configurations, identity management, and data protection. Cloud audits rely heavily on documentation, logs, security policies, and sometimes provider certifications (like ISO 27001 or SOC 2 reports).
+- **Cloud Audits.** In cloud environments, data and systems live on servers owned by cloud providers like AWS, Microsoft Azure, or Google Cloud. Auditors focus less on physical security and more on the shared responsibility model, where the cloud provider secures the infrastructure, but the customer is responsible for configurations, identity management, and data protection. Cloud audits rely heavily on documentation, logs, security policies, and sometimes provider certifications (like ISO 27001 or SOC 2 reports).
 
-**Hybrid Audits.** Many companies combine both approaches — some systems run on-premises while others are hosted in the cloud. This is called a hybrid environment. Hybrid audits must cover both the physical world and the virtual/cloud world. This means auditors will verify internal processes, cloud configurations, data flows between systems, and how security is maintained across both locations.
+- **Hybrid Audits.** Many companies combine both approaches — some systems run on-premises while others are hosted in the cloud. This is called a hybrid environment. Hybrid audits must cover both the physical world and the virtual/cloud world. This means auditors will verify internal processes, cloud configurations, data flows between systems, and how security is maintained across both locations.
 
 
 
