Update 6.1 Design and validate assessment, test, and audit strategy.md

--- a/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
+++ b/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
@@ -1,6 +1,6 @@
 ## 6.1 Design and validate assessment, test, and audit strategy ##
 
-We've spent all this time learning how to build a secure environment… now it’s time to verify if it actually is secure. Tests, assessments, and audits are the tools security professionals use to uncover vulnerabilities, misconfigurations, and procedural weaknesses before attackers do. Domain 6 teaches how to look under the hood of your security program and answer the big question: “*Are we really protected?*”
+In previous domains we have learned how to build a secure environment… now it’s time to verify if it actually is secure. Tests, assessments, and audits are the tools security professionals use to uncover vulnerabilities, misconfigurations, and procedural weaknesses before attackers do. Domain 6 teaches how to look under the hood of your security program and answer the big question: “*Are we really protected?*”
 
 **Testing** is like doing a fire drill. Penetration tests (pen tests), vulnerability scans, and security functional tests are about simulating attacks, checking what works, and what doesn’t. These are often technical, hands-on, and actively probe systems to see what breaks.
 
