Update 6.1 Design and validate assessment, test, and audit strategy.md

--- a/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
+++ b/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
@@ -235,7 +235,8 @@ Unlike internal (first-party) or customer-led (second-party) evaluations, third-
 
 Third-party assessments are especially important when trust must extend beyond contracts. In industries such as finance, healthcare, e-commerce, and cloud computing, stakeholders (like customers, investors, and regulators) demand formal proof that security controls are not only documented but are actually working as intended. This is where third-party evaluations provide measurable and credible assurance.
 
-Third-party tests, assessments, and audits follow a structured methodology to verify whether an organization meets a specific set of security or compliance requirements.
+Third-party tests, assessments, and audits follow a structured methodology to verify whether an organization meets a specific set of security or compliance requirements. They usually follow these steps:
+
 1. **Scope Definition**
 The third-party auditor or assessor defines the boundaries of the audit with the client, including systems, processes, locations, and the relevant compliance framework (e.g., ISO 27001, SOC 2, PCI DSS).
 
