--- a/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
+++ b/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
@@ -277,8 +277,53 @@ When an auditor completes a SOC 1, SOC 2, or SOC 3 review, the report will be ei
 
 Type 2 reports give stronger proof because they show the company didn’t just set up the controls, but also followed them day after day.
 
-<img width="512" height="346" alt="SOC" src="https://github.com/user-attachments/assets/271081bc-d598-48eb-8a86-66208f9d43a5" />
+```mermaid
 
+mindmap
+  root((SOC Reports))
+    SOC 1
+      Purpose:::a
+        - Financial reporting
+        - Ensures systems prevent fraud or errors
+      Typical Users:::b
+        - Payroll services
+        - Billing companies
+        - Accounting providers
+      Focus:::c
+        - Controls relevant to financial statements
+    SOC 2
+      Purpose:::a
+        - Data security and system reliability
+      Trust Service Criteria:::b
+        - Security
+        - Availability
+        - Processing Integrity
+        - Confidentiality
+        - Privacy
+      Typical Users:::c
+        - Cloud providers
+        - SaaS platforms
+        - Payment processors
+    SOC 3
+      Purpose:::a
+        - Public summary of SOC 2
+        - Demonstrates independent validation of controls
+      Features:::b
+        - Non-technical
+        - Publicly shareable
+        - Same five Trust Service Criteria
+    Report Types
+      Type 1:::a
+        - Checks controls at a specific point in time
+        - Example: "As of January 1st"
+      Type 2:::b
+        - Evaluates control effectiveness over a period (6–12 months)
+        - Example: "From January 1st to December 31st"
+        - Provides stronger assurance
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
 
 
 :link: Give a look also to [1.3.2 Organizational processes (e.g., acquisitions, divestitures, governance committees)](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/3164e7d9f233737f74d6fd85400a8cdd4dcae627/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#132-organizational-processes-eg-acquisitions-divestitures-governance-committees)
