Update 6.3 Collect security process data (e.g., technical and administrative).md

--- a/DOMAIN6: Security Assessment and Testing/6.3 Collect security process data (e.g., technical and administrative).md
+++ b/DOMAIN6: Security Assessment and Testing/6.3 Collect security process data (e.g., technical and administrative).md
@@ -2,7 +2,7 @@
 
 Account Management is the set of processes and controls used to create, monitor, update, and delete user accounts in an IT environment. Whether you're dealing with a corporate network, cloud platforms, or physical access systems, proper account management ensures that only the right people have the right access at the right time.
 
-:link: Refer also to [Domain5](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN5%3A%20Identity%20and%20Access%20Management%20(IAM)/5.0%20Preface.md#50-preface)
+:link: Refer also to [Domain5 Identity and Access Management](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN5%3A%20Identity%20and%20Access%20Management%20(IAM)/5.0%20Preface.md#50-preface)
 
 In cybersecurity, account management is critical because user accounts are often the first and most common entry point for attackers. Weak, stale, or overly-permissive accounts can allow attackers to bypass security defenses. Compromised accounts can be used to move laterally through systems, steal data, and escalate privileges. That's why modern security programs treat account management as a core defense measure, not just an administrative task.
 
