Update 2.03 Provision information and assets securely.md

--- a/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
+++ b/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
@@ -49,7 +49,7 @@ The primary purpose of an automated configuration management system (CMS) is to 
 5. How does the provisioning of IT resources affect an organization's security posture?
 <details>
   <summary>Show answer</summary>
-"The provisioning (and deprovisioning) of IT resources directly impacts an organization's security posture as it introduces new assets and potential vulnerabilities. Secure provisioning processes are vital to maintaining a strong security stance.
+The provisioning (and deprovisioning) of IT resources directly impacts an organization's security posture as it introduces new assets and potential vulnerabilities. Secure provisioning processes are vital to maintaining a strong security stance.
 </details>
 
 6. What is the role of a data custodian in relation to data security?
@@ -98,12 +98,12 @@ Managing hardware assets efficiently involves employing tools and processes to t
 | Feature               | Barcodes                                    | QR Codes                                      | RFID                                            |
 |-----------------------|---------------------------------------------|-----------------------------------------------|-------------------------------------------------|
 | **Type of Technology**| Optical, 1D line scanning                   | Optical, 2D camera scanning                   | Radio‑Frequency (no line-of-sight needed)      |
-| **Storage Capacity**  | Limited (~20–25 characters)                 | High (up to ~4,000–7,000 characters)          | Moderate to high, depending on tag type (read/write possible) :contentReference[oaicite:1]{index=1} |
-| **Reading Requirement**| Must be in line-of-sight and close range    | Must be in line-of-sight and close range      | Can be read from a distance, no direct sight needed :contentReference[oaicite:2]{index=2} |
-| **Cost**              | Very low                                     | Low                                           | Moderate to high (tag + reader infrastructure)  :contentReference[oaicite:3]{index=3} |
-| **Applications**      | Retail, inventory, shipping                  | Marketing, payments, authentication           | Asset tracking, logistics, contactless payments :contentReference[oaicite:4]{index=4} |
-| **Durability**        | Low—prone to scuffing or fading              | Better—often readable even when partially damaged | High—tags withstand harsh environments and wear  :contentReference[oaicite:5]{index=5} |
-| **Simultaneous Reads**| One at a time                                | One at a time                                 | Multiple tags at once via bulk reading           :contentReference[oaicite:6]{index=6} |
+| **Storage Capacity**  | Limited (~20–25 characters)                 | High (up to ~4,000–7,000 characters)          | Moderate to high, depending on tag type (read/write possible) |
+| **Reading Requirement**| Must be in line-of-sight and close range    | Must be in line-of-sight and close range      | Can be read from a distance, no direct sight needed |
+| **Cost**              | Very low                                     | Low                                           | Moderate to high (tag + reader infrastructure) |
+| **Applications**      | Retail, inventory, shipping                  | Marketing, payments, authentication           | Asset tracking, logistics, contactless payments |
+| **Durability**        | Low—prone to scuffing or fading              | Better—often readable even when partially damaged | High—tags withstand harsh environments and wear |
+| **Simultaneous Reads**| One at a time                                | One at a time                                 | Multiple tags at once via bulk reading |
 
 :bulb: Radio Frequency Identification (RFID) is a technology that uses electromagnetic fields to automatically identify and track objects, animals, or people via RFID tags. These tags contain a microchip and an antenna, allowing them to store and transmit data wirelessly to an RFID reader. When the reader emits a radio signal, the tag responds with its stored information, which is then processed by a system for inventory management, access control, or asset tracking. RFID tags can be passive (powered by the reader's signal) or active (with their own battery for longer range). This technology is widely used in supply chains, contactless payments, security access systems, and even smart passports.
 
